<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.elins.aktvtas.TrainingActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/trainer_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/training_activity"/>

        <TextView
            android:id="@+id/trainer_activity_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginBottom="20dp"
            android:textColor="@color/accent"
            android:layout_below="@id/trainer_title"
            android:text="@string/stand"/>

        <RelativeLayout
            android:id="@+id/trainer_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trainer_activity_name"
            android:layout_centerVertical="true"
            android:layout_marginBottom="30dp" >

            <TextView
                android:id="@+id/trainer_time_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/starts_in"/>

            <TextView
                android:id="@+id/trainer_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="60sp"
                android:textStyle="bold"
                android:layout_below="@id/trainer_time_left"/>

            <Button
                android:id="@+id/trainer_control_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/trainer_duration"
                android:layout_centerHorizontal="true"
                android:text="@string/stop"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/sensor_monitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trainer_timer"
            android:orientation="vertical"/>

    </RelativeLayout>

</LinearLayout>
