<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_prediction"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.elins.aktvtas.PredictionActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/trainer_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/predicting_activity"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prediction_activity_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/trainer_title"
                android:layout_marginBottom="20dp"
                android:text="@string/stand"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/accent"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/prediction_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/prediction_activity_name"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/predicted_activity"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/prediction_icon"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_not_recognized"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/prediction_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/not_recognized"
                        android:textAlignment="center" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/prediction_accuracy_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/prediction_activity"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/accuracy"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/prediction_accuracy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="98%"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/accent"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/prediction_countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/md_white_1000"/>
    </RelativeLayout>

</LinearLayout>
